Change Favorite height to auto to prevent overlapping

--- a/src/Components/Home/Favorite/Favorite.css
+++ b/src/Components/Home/Favorite/Favorite.css
@@ -58,9 +58,11 @@ h2 {
 
     .Favorite {
         width: 80%;
+        height: auto;
         display: block;
         max-height: none;
-        margin: 0 auto;
+        margin: 0px auto;
+        margin-bottom: 30px;
     }
 
     .Favorite .info {
@@ -69,13 +71,13 @@ h2 {
         border-top: none;
         border-radius: 0px 0px 10px 10px;
         margin: 0px;
-        padding: 5px;
+        padding: 30px;
         box-sizing: border-box;
     }
 
     .Favorite .img-container {
         width: 100%;
         height: 350px;
-        border-radius: 20px 20px 0 0;
+        border-radius: 10px 10px 0 0;
     }
 }
